[package]
name = "lightshark-mini"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
pcap = "2.0.0"
etherparse = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "add-extension"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4"
ctrlc = "3.4"
serde_yaml = "0.9"
dns-lookup = "2.0"
